# 03-fastapi

./: pyproject.toml
src/: worker.py
