[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nepse"
version = "0.1.3"

readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Development Status :: 0.1.0 - Beta",
        "Intended Audience :: Research",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.8",
    ]
dependencies = [
   "fastapi",
]



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.wasm"]
